k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mtuci-eda
  namespace: mtuci-eda
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: auth.eda.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 80
    - host: user.eda.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user
                port:
                  number: 80
    - host: order.eda.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: order
                port:
                  number: 80
    - host: restaurant.eda.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: restaurant
                port:
                  number: 80
    - host: notification.eda.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notification
                port:
                  number: 80
